added check due date
